refactor: 버스정류장, 도시코드 API UriComponentsBuilder 사용하도록 변경